Fixed blog text aligniment

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
 }
 
 #PostBody{
-  text-align: justify;
   padding-left: 10%;
   padding-right: 10%;
 }
@@ -16,7 +15,6 @@
 #PostDate{
   margin-bottom: -20px;
   font-size: 15px;
-  text-align: justify;
   padding-left: 10%;
   padding-right: 10%;
   font-style: italic;
